Comment Section updated